# randomizer

./: CHANGELOG.md  CONFIG.md  Cargo.toml  LICENSE  README.md  cliff.toml  commitlint.toml  install.ps1  install.sh
.cargo-husky/hooks/: commit-msg  pre-commit
.github/workflows/: releases.yml
src/: main.rs  state.rs
src/api/: mod.rs  rest.rs  websocket.rs
src/compiler/: compile.rs  mod.rs
src/generator/: core.rs  mod.rs
src/generator/composite/: list.rs  mod.rs  object.rs
src/generator/primitives/: boolean.rs  enumeration.rs  float.rs  int.rs  mod.rs  string.rs  uuid.rs
src/parser/: mod.rs
src/schema/: mod.rs  model.rs  parser.rs
