[package]
name = "randomizer"
version = "0.1.0"
edition = "2024"
authors = ["rangaraja-r", "mark-felix"]

[dependencies]

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Web framework (REST + WebSocket) ---
axum = "0.8"

# --- JSON parsing ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Random generation ---
rand = "0.10"

# --- Error handling ---
thiserror = "2"

# --- Logging / debugging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# --- Concurrent caching ---
dashmap = "6"


[dev-dependencies]
# --- git hooks ---
cargo-husky = "1"
